syntax = "proto3";

service Ping {
	rpc SendPing (PingRequest) returns (PingResponse);
}

message PingRequest{}

message PingResponse {}